# PCD-Tugas-Besar-Rayya-Beny

BackEnd/: main.py  pyproject.toml  requirements.txt  schemas.py
BackEnd/routers/: image.py
BackEnd/services/: pipline.py
BackEnd/services/operations/: brightness.py  edge_detection.py  histogram_eq.py  histogram_spec.py  rotate.py
Frontend/: package-lock.json
Frontend/my-react-app/src/: App.jsx
Frontend/my-react-app/src/api/: imageApi.js
Frontend/my-react-app/src/components/EditorPage/: EditorPage.jsx
Frontend/my-react-app/src/components/UploadPage/: UploadPage.jsx
Frontend/my-react-app/src/store/: editorStore.js
